fix: improve info page styling sidebars and remove collapse content

--- a/styles/wikiStyles.scss
+++ b/styles/wikiStyles.scss
@@ -44,8 +44,15 @@
     border-radius: 4px;
   }
 
+  .sidebar {
+    float: left;
+    clear: left;
+    margin: 0.5em 1em 0.5em 0em;
+  }
+
   table,
-  .infobox {
+  .infobox,
+  .sidebar {
     background-color: #444444;
     border-radius: 4px;
     border-collapse: collapse;
